[tool.poetry]
name = "sdss-clu"
version = "2.1.1"
description = "A new protocol for SDSS actors."
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/sdss/clu"
repository = "https://github.com/sdss/clu"
documentation = "https://clu.readthedocs.io/en/latest/"
keywords = ["astronomy", "software"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "clu", from = "python" }
]
include = []
exclude = []

[tool.poetry.scripts]
clu = "clu.__main__:main"

[tool.poetry.dependencies]
python = "^3.8,<4.0"
click = "^8.0"
aio_pika = "^9.0.0"
jsonschema = "^4.0.1"
sdsstools = "^1.0.0"
prompt_toolkit = "^3.0.6"
aiormq = "^6.6.4"
unclick = "^0.1.0b4"
websockets = {version = "^11.0.3", optional = true}
click-default-group = "^1.2.2"

[tool.poetry.dev-dependencies]
ipython = ">=8.0.0"
flake8 = ">=3.7.9"
doc8 = ">=0.8.0"
toml = ">=0.10.0"
isort = ">=5.2.2"
ipdb = ">=0.13.3"
rstcheck = ">=3.3.1"
black = ">=20.8b1"
pytest-mock = ">=3.2.0"
codecov = ">=2.0.15"
coverage = {version = ">=5.0", extras = ["toml"]}
pytest = ">=5.2.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
pytest-sugar = ">=0.9.2"
mirakuru = ">=2.0.0"
Sphinx = ">=5.0.0"
myst-parser = ">=0.14.0"
sphinx-copybutton = ">=0.3.3"
nox = ">=2021.6.12"
sphinx-autobuild = ">=2021.3.14"
furo = ">=2021.6.18"

[tool.poetry.extras]
websocket = ["websockets"]

[tool.black]
line-length = 88
target-version = ['py311']
fast = true
extend-exclude = 'docs/sphinx/examples/.+\.py'

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "clu"
known_typing = ["typing"]
known_sdss = ["sdsstools"]
lines_after_imports = 2
skip_glob = [
    "setup.py",
    "*/__init__.py",
    "docs/sphinx/examples/*.py"
]

[tool.pytest.ini_options]
addopts = "--cov clu --cov-report xml --cov-report html --cov-report term -p no:warnings"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = [
    "*/__init__.py",
    "*/__main__.py",
    "*/clu/legacy/types/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "@abc.abstractmethod",
    "class TCPProtocol",
    "class PeriodicTCPServer",
    "class CaseInsensitiveDict",
    "def cli_coro",
    "class ReconnectingTCPClientProtocol",
    "if TYPE_CHECKING"
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
