[metadata]
name = sdss-clu
version = 0.1.6-dev
author = José Sánchez-Gallego
author_email = gallegoj@uw.edu
description = A new protocol for SDSS actors
project_urls =
	Repository = https://github.com/sdss/clu
	Documentation = https://sdss-clu.readthedocs.org
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7
	Topic :: Documentation :: Sphinx
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.7
include_package_data = True
packages = find:
package_dir =
	= python
install_requires =
	numpy>=1.15.1
	ruamel.yaml>=0.15.61
	pygments>=2.2.0
	click>=7.0
	aio_pika>=5.5.3
	jsonschema>=3.0.1
	prompt-toolkit>=2.0.9

[options.packages.find]
where =
	python
exclude =
	*.tests

[options.package_data]
* =
	etc/*

[options.extras_require]
dev =
	asynctest>=0.13.0
	flake8
	ipython
	pytest
	pytest-asyncio
	pytest-cov
	pytest-sugar
	invoke
	bump2version
	wheel
docs =
	Sphinx>=1.8.0
	releases>=1.6.1
	sphinxcontrib-trio>=1.0.1
	sphinx-click>=1.3.0
	semantic-version==2.6.0  # Un-pin when releases gets updated.

[isort]
line_length = 99
lines_after_imports = 2
use_parentheses = true
balanced_wrapping = true

[flake8]
ignore =
	H101
	W504
	W505
max-line-length = 99

[bumpversion]
current_version = 0.1.6-dev
commit = True
tag = False
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-)?(?P<release>[a-z]+)?
serialize =
	{major}.{minor}.{patch}-{release}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = alpha
values =
	dev
	alpha

[bumpversion:file:python/clu/__init__.py]
[bumpversion:file:setup.cfg]

[coverage:run]
branch = true
